--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,7 @@
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.Ble_explorer"
-		tools:ignore="UnusedAttribute">
+		android:theme="@style/Theme.Ble_explorer">
 		<activity
 			android:name=".MainActivity"
 			android:exported="true"
