--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools">
-	<uses-permission
-		android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	<uses-permission
-		android:name="android.permission.ACCESS_COARSE_LOCATION"
-		android:maxSdkVersion="30"/>
-	<uses-permission android:name ="android.permission.BLUETOOTH_ADMIN" />
-	<uses-permission android:name="android.permission.BLUETOOTH" />
-	<uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-	<uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-	<uses-feature
-		android:name="android.hardware.bluetooth_le"
-		android:required="true" />
+	xmlns:android="http://schemas.android.com/apk/res/android">
 	<application
 		android:name=".ExplorerApp"
 		android:allowBackup="true"
